<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFE0"
    tools:context=".adminHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_header"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn"
            android:layout_weight="1"
            android:text="@string/home"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/icon_exit"
            android:layout_weight="3"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view"
            android:text="( Admin's name )"
            android:textSize="24sp"
            android:textColor="#000000"
            android:padding="10dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/addEmployeeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn"
            android:text="@string/add_employee"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:ems="10"/>

        <Button
            android:id="@+id/employeeInfoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn"
            android:text="@string/employee_info"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:ems="10"/>

        <Button
            android:id="@+id/updateProfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn"
            android:text="@string/update_profile"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:ems="10"/>

        <Button
            android:id="@+id/deleteProfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn"
            android:text="@string/delete_profile"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:ems="10"/>

        <Button
            android:id="@+id/updatePasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn"
            android:text="@string/update_password"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:ems="10"/>

    </LinearLayout>

</LinearLayout>