<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFE0"
    tools:context=".attendance"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_header"
        android:padding="10dp">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/icon_back"
            android:layout_weight="3"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attendance"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/icon_exit"
            android:layout_weight="3"
            android:padding="10dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentDateTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_view"
                android:text="@string/current_date"
                android:textColor="#000000"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/currentTimeTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_view"
                android:text="@string/current_time"
                android:textColor="#000000"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:gravity="center"/>

            <fragment
                android:id="@+id/google_map"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/clockInDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_view"
                    android:layout_weight="1"
                    android:text="@string/kosong"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/clockOutDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_view"
                    android:layout_weight="1"
                    android:text="@string/kosong"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/clockInTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_view"
                    android:layout_weight="1"
                    android:text="@string/kosong"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/clockOutTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_view"
                    android:layout_weight="1"
                    android:text="@string/kosong"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/clockIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_btn"
                    android:layout_weight="1"
                    android:text="@string/clock_in"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/clockOut"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_btn"
                    android:layout_weight="1"
                    android:text="@string/clock_out"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>